--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,10 @@
     <title>Run Scripts</title>
 </head>
 <body>
+    {% include 'header.html' %}
+
     <h1>Run Python Scripts</h1>
+    <a href="{{ url_for('searchForMatch') }}"><button>SearchForMatch</button></a>
     <button onclick="window.location.href='/run_script1'">Run licenta.py</button>
     <button onclick="window.location.href='/run_script2'">Run deathLocations.py</button>
 </body>
