--- a/templates/matchDetails.html
+++ b/templates/matchDetails.html
@@ -4,41 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run Scripts</title>
-    <style>
-        #header {
-            position: sticky;
-            background-color: #202020;
-            width: 100vw;
-            height: 100px;
-            display: flex;
-        }
-        #header div {
-            position: absolute;
-            height: 20px;
-            font-size: 20px;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
-        #home {
-            left: 2.5vw;
-        }
-        #username {
-            left: 87vw;
-        }
-        #logout {
-            left: 95vw;
-        }
-        #logo {
-            left: 50vw;
-        }
-
-        body {
-            margin: 0px;
-            font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-            background-color: rgb(18, 18, 18);
-            color: rgb(200, 200, 200);
-        }
-        
+    <style>        
         img, .emptyItemSlot {
             width: 40px;
             border-radius: 25%;
@@ -65,6 +31,11 @@
             height: 40px;
         }
 
+        .championName img {
+            border-radius: 0px;
+            width: 50px;
+            height: 50px;
+        }
         .championName, .championKDA {
             width: 70px;
             text-align: center;
@@ -115,12 +86,7 @@
     </style>
 </head>
 <body>
-    <div id="header">
-        <div id="home">H</div>
-        <div id="logo">PCaGS</div>
-        <div id="username">Username</div>
-        <div id="logout">Log out</div>
-    </div>
+    {% include 'header.html' %}
     <div id="title">Match {{matchId}}</div>
     <table>
         <tr>
@@ -129,7 +95,11 @@
         </tr>
         {% for i in range(5) %}
             <tr>
-                <td class="blueTeam championName">{{ champions[i] }}</td>
+                <td class="blueTeam championName">
+                    <a href="{{ url_for('championDetails') }}?championName={{champions[i]}}&championSkillLevels={{skillLevelUps[i]}}">
+                        <img src="{{'https://wiki.leagueoflegends.com/en-us/images/thumb/' ~ champions[i] ~ '_OriginalSquare.png/70px- ~ champions[i] ~_OriginalSquare.png?54659.png.webp' }}">
+                    </a>
+                </td>
                 <td class="blueTeam championKDA">{{ kdas[0][i] }}/{{ kdas[1][i] }}/{{ kdas[2][i] }}</td>
                 <td class="blueTeam championItems">
                     {% for j in range(4) %}
@@ -150,7 +120,12 @@
                         {% endif %}
                     {% endfor %}
                 </td>
-                <td class="redTeam championName">{{ champions[i + 5] }}</td>
+                
+                <td class="redTeam championName">
+                    <a href="{{ url_for('championDetails') }}?championName={{champions[i+5]}}&championSkillLevels={{skillLevelUps[i+5]}}">
+                        <img src="{{'https://wiki.leagueoflegends.com/en-us/images/thumb/' ~ champions[i+5] ~ '_OriginalSquare.png/70px- ~ champions[i+5] ~_OriginalSquare.png?54659.png.webp' }}">
+                    </a>
+                </td>
                 <td class="redTeam championKDA">{{ kdas[0][i + 5] }}/{{ kdas[1][i + 5] }}/{{ kdas[2][i + 5] }}</td>
                 <td class="redTeam championItems">
                     {% for j in range(4) %}
