Viego rezolvat, match history adaugat

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 
     <h1>Run Python Scripts</h1>
     <a href="{{ url_for('searchForMatch') }}"><button>SearchForMatch</button></a>
+    <a href="{{ url_for('lastGames') }}"><button>Get last 100 games</button></a>
     <button onclick="window.location.href='/run_script1'">Run licenta.py</button>
     <button onclick="window.location.href='/run_script2'">Run deathLocations.py</button>
 </body>
