--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,7 @@
 <h2>Login</h2>
 <form method="POST">
     Username: <input name="username"><br>
+    Tag: <input name="riotTag"><br>
     Password: <input type="password" name="password"><br>
     <input type="submit" value="Login">
 </form>
