--- a/templates/matchDetails.html
+++ b/templates/matchDetails.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run Scripts</title>
     <style>        
-        img, .emptyItemSlot {
+        .itemImage, .emptyItemSlot {
             width: 40px;
             border-radius: 25%;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3); /*0.2 0.19*/
@@ -29,6 +29,9 @@
             background-color: rgba(192, 48, 48, 0.5);
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             height: 40px;
+        }
+        #winningTeam {
+            border: 2px solid gold;
         }
 
         .championName img {
@@ -62,6 +65,9 @@
             left: 50%;
             transform: translateX(-50%);
         }
+        tr:last-of-type {
+            height: 130px;
+        }
         tr:nth-child(2) td {
             padding-top: 10px;
         }
@@ -81,6 +87,7 @@
             background-color: rgb(30, 30, 30);
             display: none;
             transform: translateX(-50%);
+            width: max-content;
         }
         .gray {
             color: #bbbbbb;
@@ -99,16 +106,25 @@
     <div id="title">Match {{matchId}}</div>
     <table>
         <tr>
-            <th class="blueTeam" colspan="3">Team Blue</th>
-            <th class="redTeam" colspan="3">Team Red</th>
+            {% if winner == 1 %}
+                <th class="blueTeam" id="winningTeam" colspan="3">Team Blue</th>
+                <th class="redTeam" colspan="3">Team Red</th>
+            {% else %}
+                <th class="blueTeam" colspan="3">Team Blue</th>
+                <th class="redTeam" id="winningTeam" colspan="3">Team Red</th>
+            {% endif %}
         </tr>
         {% for i in range(5) %}
             <tr>
                 <td class="blueTeam championName">
-                    <a href="{{ url_for('championDetails') }}?championName={{champions[i]}}&championSkillLevels={{skillLevelUps[i]}}">
-                        <img src="{{'https://wiki.leagueoflegends.com/en-us/images/thumb/' ~ champions[i] ~ '_OriginalSquare.png/70px- '~ champions[i] ~ '_OriginalSquare.png?54659.png.webp' }}">
-                    </a><br>
-                    {{champions[i]}}
+                    {% if champions[i] != "Cappa" %}
+                        <a href="{{ url_for('championDetails') }}?matchId={{ matchId }}&participant={{ i }}">
+                            <img src="{{'https://wiki.leagueoflegends.com/en-us/images/thumb/' ~ champions[i] ~ '_OriginalSquare.png/70px- '~ champions[i] ~ '_OriginalSquare.png?54659.png.webp' }}">
+                        </a>
+                    {% else %}
+                        <img src="url(https://wiki.leagueoflegends.com/en-us/images/Cappa_Juice_item.png?8aa04)">
+                    {% endif %}
+                    <br>{{champions[i]}}
                 </td>
                 
                 <td class="blueTeam championKDA">
@@ -125,7 +141,7 @@
                 <td class="blueTeam championItems">
                     {% for j in range(4) %}
                         {% if builds[i][j] %}
-                            <img src="{{'https://cdn.darkintaqt.com/lol/c-assets/items/' ~ builds[i][j] ~ '.png.webp' }}" id="[{{i}}][{{j}}]">
+                            <img class="itemImage" src="{{'https://cdn.darkintaqt.com/lol/c-assets/items/' ~ builds[i][j] ~ '.png.webp' }}" id="[{{i}}][{{j}}]">
                             <div class="overlayText" id="text_[{{i}}][{{j}}]">{{itemNames[i][j]}}</div>
                         {% else %}
                             <div class="emptyItemSlot"></div>
@@ -134,7 +150,7 @@
                     <br>
                     {% for j in range(3) %}
                         {% if builds[i][j+4] %}
-                            <img src="{{'https://cdn.darkintaqt.com/lol/c-assets/items/' ~ builds[i][j+4] ~ '.png.webp' }}" id="[{{i}}][{{j+4}}]">
+                            <img class="itemImage" src="{{'https://cdn.darkintaqt.com/lol/c-assets/items/' ~ builds[i][j+4] ~ '.png.webp' }}" id="[{{i}}][{{j+4}}]">
                             <div class="overlayText" id="text_[{{i}}][{{j+4}}]">{{itemNames[i][j+4]}}</div>
                         {% else %}
                             <div class="emptyItemSlot"></div>
@@ -143,10 +159,14 @@
                 </td>
                 
                 <td class="redTeam championName">
-                    <a href="{{ url_for('championDetails') }}?championName={{champions[i+5]}}&championSkillLevels={{skillLevelUps[i+5]}}">
-                        <img src="{{'https://wiki.leagueoflegends.com/en-us/images/thumb/' ~ champions[i+5] ~ '_OriginalSquare.png/70px- ~ champions[i+5] ~_OriginalSquare.png?54659.png.webp' }}">
-                    </a><br>
-                    {{champions[i+5]}}
+                    {% if champions[i+5] != "Cappa" %}
+                        <a href="{{ url_for('championDetails') }}?matchId={{ matchId }}&participant={{ i+5 }}">
+                            <img src="{{'https://wiki.leagueoflegends.com/en-us/images/thumb/' ~ champions[i+5] ~ '_OriginalSquare.png/70px- '~ champions[i+5] ~ '_OriginalSquare.png?54659.png.webp' }}">
+                        </a>
+                    {% else %}
+                        <img src="https://wiki.leagueoflegends.com/en-us/images/Cappa_Juice_item.png?8aa04">
+                    {% endif %}
+                    <br>{{champions[i+5]}}
                 </td>
                 <td class="redTeam championKDA">
                     {% if kdas[1][i + 5] == 0 %}
@@ -162,7 +182,7 @@
                 <td class="redTeam championItems">
                     {% for j in range(4) %}
                         {% if builds[i+5][j] %}
-                            <img src="{{'https://cdn.darkintaqt.com/lol/c-assets/items/' ~ builds[i+5][j] ~ '.png.webp' }}" id="[{{i+5}}][{{j}}]">
+                            <img class="itemImage" src="{{'https://cdn.darkintaqt.com/lol/c-assets/items/' ~ builds[i+5][j] ~ '.png.webp' }}" id="[{{i+5}}][{{j}}]">
                             <div class="overlayText" id="text_[{{i+5}}][{{j}}]">{{itemNames[i+5][j]}}</div>
                         {% else %}
                             <div class="emptyItemSlot"></div>
@@ -171,7 +191,7 @@
                     <br>
                     {% for j in range(3) %}
                         {% if builds[i+5][j+4] %}
-                            <img src="{{'https://cdn.darkintaqt.com/lol/c-assets/items/' ~ builds[i+5][j+4] ~ '.png.webp' }}" id="[{{i+5}}][{{j+4}}]">
+                            <img class="itemImage" src="{{'https://cdn.darkintaqt.com/lol/c-assets/items/' ~ builds[i+5][j+4] ~ '.png.webp' }}" id="[{{i+5}}][{{j+4}}]">
                             <div class="overlayText" id="text_[{{i+5}}][{{j+4}}]">{{itemNames[i+5][j+4]}}</div>
                         {% else %}
                             <div class="emptyItemSlot"></div>
@@ -183,11 +203,10 @@
     </table>
 </body>
 <script>
-    const imgs = document.getElementsByTagName("img");
+    const imgs = document.getElementsByClassName("itemImage");
     const overlays = document.getElementsByClassName("overlayText");
     for (let overlay of overlays) {
         overlay.style.left = (43 * (overlay.id[9] - 4 * Math.floor(overlay.id[9] / 4)) + 182 + 348 * Math.floor(overlay.id[6] / 5)) + "px";
-        console.log(overlay.style.left)
     }
     for (let img of imgs)
         img.addEventListener("mouseover", () => {
